gráficos e tabelas add (parcialmente func.)

--- a/index.html
+++ b/index.html
@@ -11,25 +11,42 @@
 <body>
     <!--botão menu-->
     <div>
-      <span id="btn-menu" class="material-symbols-outlined">menu</span>
+      <span id="btn-menu" class="show material-symbols-outlined">menu</span>
     </div> 
     
     <!--sidebar-->
-    <div id="sidebar" class="">
+    <div id="sidebar" class="show">
       <div class="text-menu">
         <span>Algoritmos de Ordenação</span>
       </div>
 
+      <div class="option-submenu">
       <div class="option">
-        <span>Introdução</span>
-        <div class="button">
-          <span class="material-symbols-outlined">home</span>
+        <span class="label">Introdução</span>
+        <div class="button expand clicked">
+          <span class="material-symbols-outlined">expand_more</span>
         </div>
       </div>
+      <div class="submenu show">
+        <ul>
+        <li class="subitem">
+          <span class="label">
+            <a href="page2.html">Tabela geral</a>
+          </span>
+          <span class="material-symbols-outlined">dataset</span>
+        </li>
+        <li class="subitem">
+          <span class="label">
+            <a href="index.html">Gráfico geral</a></span>
+          <span class="material-symbols-outlined">dataset</span>
+        </li>
+        </ul>
+      </div>
+    </div>
 
       <div class="option-submenu">
       <div class="option">
-        <span>BubbleSort</span>
+        <span class="label">BubbleSort</span>
         <div class="button expand">
           <span class="material-symbols-outlined">expand_more</span>
         </div>
@@ -37,11 +54,11 @@
       <div class="submenu">
         <ul>
         <li class="subitem">
-          <span>Tabela</span>
+          <span class="label">Tabela</span>
           <span class="material-symbols-outlined">dataset</span>
         </li>
         <li class="subitem">
-          <span>Gráfico</span>
+          <span class="label">Gráfico</span>
           <span class="material-symbols-outlined">dataset</span>
         </li>
         </ul>
@@ -50,20 +67,19 @@
 
       <div class="option-submenu">
         <div class="option">
-          <span>InsertionSort</span>
+          <span class="label">InsertionSort</span>
           <div class="button expand">
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-
         <div class="submenu">
           <ul>
           <li class="subitem">
-            <span>Tabela</span>
+            <span class="label">Tabela</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           <li class="subitem">
-            <span>Gráfico</span>
+            <span class="label">Gráfico</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           </ul>
@@ -72,20 +88,19 @@
 
       <div class="option-submenu">
         <div class="option">
-          <span>MergeSort</span>
+          <span class="label">MergeSort</span>
           <div class="button expand">
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-  
         <div class="submenu">
           <ul>
           <li class="subitem">
-            <span>Tabela</span>
+            <span class="label">Tabela</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           <li class="subitem">
-            <span>Gráfico</span>
+            <span class="label">Gráfico</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           </ul>
@@ -94,20 +109,19 @@
 
       <div class="option-submenu">
         <div class="option">
-          <span>QuickSort</span>
+          <span class="label">QuickSort</span>
           <div class="button expand">
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-  
         <div class="submenu">
           <ul>
           <li class="subitem">
-            <span>Tabela</span>
+            <span class="label">Tabela</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           <li class="subitem">
-            <span>Gráfico</span>
+            <span class="label">Gráfico</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           </ul>
@@ -116,20 +130,19 @@
 
       <div class="option-submenu">
         <div class="option">
-          <span>ShellSort</span>
+          <span class="label">ShellSort</span>
           <div class="button expand">
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-  
         <div class="submenu">
           <ul>
           <li class="subitem">
-            <span>Tabela</span>
+            <span class="label">Tabela</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           <li class="subitem">
-            <span>Gráfico</span>
+            <span class="label">Gráfico</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           </ul>
@@ -138,20 +151,19 @@
 
       <div class="option-submenu">
         <div class="option">
-          <span>HeapSort</span>
+          <span class="label">HeapSort</span>
           <div class="button expand">
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-  
         <div class="submenu">
           <ul>
           <li class="subitem">
-            <span>Tabela</span>
+            <span class="label">Tabela</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           <li class="subitem">
-            <span>Gráfico</span>
+            <span class="label">Gráfico</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           </ul>
@@ -160,20 +172,19 @@
 
       <div class="option-submenu">
         <div class="option">
-          <span>RadixSort</span>
+          <span class="label">RadixSort</span>
           <div class="button expand">
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-  
         <div class="submenu">
           <ul>
           <li class="subitem">
-            <span>Tabela</span>
+            <span class="label">Tabela</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           <li class="subitem">
-            <span>Gráfico</span>
+            <span class="label">Gráfico</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           </ul>
@@ -182,20 +193,19 @@
 
       <div class="option-submenu">
         <div class="option">
-          <span>GnomeSort</span>
+          <span class="label">GnomeSort</span>
           <div class="button expand">
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-  
         <div class="submenu">
           <ul>
           <li class="subitem">
-            <span>Tabela</span>
+            <span class="label">Tabela</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           <li class="subitem">
-            <span>Gráfico</span>
+            <span class="label">Gráfico</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           </ul>
@@ -204,29 +214,35 @@
 
       <div class="option-submenu">
         <div class="option">
-          <span>CountingSort</span>
+          <span class="label">CountingSort</span>
           <div class="button expand">
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-  
         <div class="submenu">
           <ul>
           <li class="subitem">
-            <span>Tabela</span>
+            <span class="label">Tabela</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           <li class="subitem">
-            <span>Gráfico</span>
+            <span class="label">Gráfico</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           </ul>
         </div>
       </div>
+
     </div>
 
-    <!--conteudo-->
+    <!--container (botoes e grafico)-->
     <div class="container">
+      <div class="buttons">
+        <button id="btn-melhor" class="button-5" role="button">Melhor caso</button>
+        <button id="btn-medio" class="button-5" role="button">Médio caso</button>
+        <button id="btn-pior" class="button-5" role="button">Pior caso</button>
+      </div>
+
       <div class="chart">
         <canvas id="chart"></canvas>
       </div>
