--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="submenu">
         <ul>
         <li class="subitem">
-          <span class="label">Tabela</span>
+          <span class="label"><a href="page3.html">Tabela</a></span>
           <span class="material-symbols-outlined">dataset</span>
         </li>
         <li class="subitem">
