--- a/page3.html
+++ b/page3.html
@@ -16,7 +16,7 @@
 <body>
   <!--botão menu-->
   <div>
-    <span id="btn-menu" class="show material-symbols-outlined">menu</span>
+    <span id="btn-menu" class="show material-symbols-outlined">close</span>
   </div>
 
   <!--sidebar-->
@@ -59,7 +59,7 @@
       <div class="submenu">
         <ul>
           <li class="subitem">
-            <span class="label"><a href="page3.html">Tabela</a></span>
+            <span class="label">Tabela</span>
             <span class="material-symbols-outlined">dataset</span>
           </li>
           <li class="subitem">
@@ -242,13 +242,7 @@
 
   <!--conteudo-->
   <div class="container">
-    <div class="buttons">
-      <button id="btn-melhor" class="button-5" role="button">Melhor caso</button>
-      <button id="btn-medio" class="button-5" role="button">Médio caso</button>
-      <button id="btn-pior" class="button-5" role="button">Pior caso</button>
-    </div>
-
-    <div class="table">
+        <div class="table">
       <table>
         <thead>
           <tr>
@@ -261,70 +255,21 @@
         </thead>
         <tbody>
           <tr>
-            <th scope="row">BUBBLE SORT</th>
+            <th scope="row">MELHOR CASO</th>
             <td>0,000001</td>
             <td>0,000417</td>
             <td>0,00034</td>
             <td>0,000964</td>
           </tr>
           <tr>
-            <th scope="row">SELECTION SORT</th>
+            <th scope="row">CASO MEDIO</th>
             <td>0,006738</td>
             <td>0,142355</td>
             <td>512,679436</td>
             <td>2388,123164</td>
           </tr>
           <tr>
-            <th scope="row">INSERTION SORT</th>
-            <td>0,006474</td>
-            <td>0,042532</td>
-            <td>343,220966</td>
-            <td>1348,68849</td>
-          </tr>
-          <tr>
-            <th scope="row">MERGE SORT</th>
-            <td>0,006474</td>
-            <td>0,042532</td>
-            <td>343,220966</td>
-            <td>1348,68849</td>
-          </tr>
-          <tr>
-            <th scope="row">QUICK SORT</th>
-            <td>0,006474</td>
-            <td>0,042532</td>
-            <td>343,220966</td>
-            <td>1348,68849</td>
-          </tr>
-          <tr>
-            <th scope="row">SHELL SORT</th>
-            <td>0,006474</td>
-            <td>0,042532</td>
-            <td>343,220966</td>
-            <td>1348,68849</td>
-          </tr>
-          <tr>
-            <th scope="row">HEAP SORT</th>
-            <td>0,006474</td>
-            <td>0,042532</td>
-            <td>343,220966</td>
-            <td>1348,68849</td>
-          </tr>
-          <tr>
-            <th scope="row">RADIX SORT</th>
-            <td>0,006474</td>
-            <td>0,042532</td>
-            <td>343,220966</td>
-            <td>1348,68849</td>
-          </tr>
-          <tr>
-            <th scope="row">GNOME SORT</th>
-            <td>0,006474</td>
-            <td>0,042532</td>
-            <td>343,220966</td>
-            <td>1348,68849</td>
-          </tr>
-          <tr>
-            <th scope="row">COUNTING SORT</th>
+            <th scope="row">PIOR CASO</th>
             <td>0,006474</td>
             <td>0,042532</td>
             <td>343,220966</td>
