novas páginas add, aprimoramento do menu

--- a/index.html
+++ b/index.html
@@ -14,226 +14,7 @@
       <span id="btn-menu" class="show material-symbols-outlined">menu</span>
     </div> 
     
-    <!--sidebar-->
-    <div id="sidebar" class="show">
-      <div class="text-menu">
-        <span>Algoritmos de Ordenação</span>
-      </div>
-
-      <div class="option-submenu">
-      <div class="option">
-        <span class="label">Introdução</span>
-        <div class="button expand clicked">
-          <span class="material-symbols-outlined">expand_more</span>
-        </div>
-      </div>
-      <div class="submenu show">
-        <ul>
-        <li class="subitem">
-          <span class="label">
-            <a href="page2.html">Tabela geral</a>
-          </span>
-          <span class="material-symbols-outlined">dataset</span>
-        </li>
-        <li class="subitem">
-          <span class="label">
-            <a href="index.html">Gráfico geral</a></span>
-          <span class="material-symbols-outlined">dataset</span>
-        </li>
-        </ul>
-      </div>
-    </div>
-
-      <div class="option-submenu">
-      <div class="option">
-        <span class="label">BubbleSort</span>
-        <div class="button expand">
-          <span class="material-symbols-outlined">expand_more</span>
-        </div>
-      </div>
-      <div class="submenu">
-        <ul>
-        <li class="subitem">
-          <span class="label"><a href="page3.html">Tabela</a></span>
-          <span class="material-symbols-outlined">dataset</span>
-        </li>
-        <li class="subitem">
-          <span class="label">Gráfico</span>
-          <span class="material-symbols-outlined">dataset</span>
-        </li>
-        </ul>
-      </div>
-      </div>
-
-      <div class="option-submenu">
-        <div class="option">
-          <span class="label">InsertionSort</span>
-          <div class="button expand">
-            <span class="material-symbols-outlined">expand_more</span>
-          </div>
-        </div>
-        <div class="submenu">
-          <ul>
-          <li class="subitem">
-            <span class="label">Tabela</span>
-            <span class="material-symbols-outlined">dataset</span>
-          </li>
-          <li class="subitem">
-            <span class="label">Gráfico</span>
-            <span class="material-symbols-outlined">dataset</span>
-          </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="option-submenu">
-        <div class="option">
-          <span class="label">MergeSort</span>
-          <div class="button expand">
-            <span class="material-symbols-outlined">expand_more</span>
-          </div>
-        </div>
-        <div class="submenu">
-          <ul>
-          <li class="subitem">
-            <span class="label">Tabela</span>
-            <span class="material-symbols-outlined">dataset</span>
-          </li>
-          <li class="subitem">
-            <span class="label">Gráfico</span>
-            <span class="material-symbols-outlined">dataset</span>
-          </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="option-submenu">
-        <div class="option">
-          <span class="label">QuickSort</span>
-          <div class="button expand">
-            <span class="material-symbols-outlined">expand_more</span>
-          </div>
-        </div>
-        <div class="submenu">
-          <ul>
-          <li class="subitem">
-            <span class="label">Tabela</span>
-            <span class="material-symbols-outlined">dataset</span>
-          </li>
-          <li class="subitem">
-            <span class="label">Gráfico</span>
-            <span class="material-symbols-outlined">dataset</span>
-          </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="option-submenu">
-        <div class="option">
-          <span class="label">ShellSort</span>
-          <div class="button expand">
-            <span class="material-symbols-outlined">expand_more</span>
-          </div>
-        </div>
-        <div class="submenu">
-          <ul>
-          <li class="subitem">
-            <span class="label">Tabela</span>
-            <span class="material-symbols-outlined">dataset</span>
-          </li>
-          <li class="subitem">
-            <span class="label">Gráfico</span>
-            <span class="material-symbols-outlined">dataset</span>
-          </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="option-submenu">
-        <div class="option">
-          <span class="label">HeapSort</span>
-          <div class="button expand">
-            <span class="material-symbols-outlined">expand_more</span>
-          </div>
-        </div>
-        <div class="submenu">
-          <ul>
-          <li class="subitem">
-            <span class="label">Tabela</span>
-            <span class="material-symbols-outlined">dataset</span>
-          </li>
-          <li class="subitem">
-            <span class="label">Gráfico</span>
-            <span class="material-symbols-outlined">dataset</span>
-          </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="option-submenu">
-        <div class="option">
-          <span class="label">RadixSort</span>
-          <div class="button expand">
-            <span class="material-symbols-outlined">expand_more</span>
-          </div>
-        </div>
-        <div class="submenu">
-          <ul>
-          <li class="subitem">
-            <span class="label">Tabela</span>
-            <span class="material-symbols-outlined">dataset</span>
-          </li>
-          <li class="subitem">
-            <span class="label">Gráfico</span>
-            <span class="material-symbols-outlined">dataset</span>
-          </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="option-submenu">
-        <div class="option">
-          <span class="label">GnomeSort</span>
-          <div class="button expand">
-            <span class="material-symbols-outlined">expand_more</span>
-          </div>
-        </div>
-        <div class="submenu">
-          <ul>
-          <li class="subitem">
-            <span class="label">Tabela</span>
-            <span class="material-symbols-outlined">dataset</span>
-          </li>
-          <li class="subitem">
-            <span class="label">Gráfico</span>
-            <span class="material-symbols-outlined">dataset</span>
-          </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="option-submenu">
-        <div class="option">
-          <span class="label">CountingSort</span>
-          <div class="button expand">
-            <span class="material-symbols-outlined">expand_more</span>
-          </div>
-        </div>
-        <div class="submenu">
-          <ul>
-          <li class="subitem">
-            <span class="label">Tabela</span>
-            <span class="material-symbols-outlined">dataset</span>
-          </li>
-          <li class="subitem">
-            <span class="label">Gráfico</span>
-            <span class="material-symbols-outlined">dataset</span>
-          </li>
-          </ul>
-        </div>
-      </div>
-
-    </div>
+    <div class="menu"></div>
 
     <!--container (botoes e grafico)-->
     <div class="container">
@@ -249,7 +30,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="funcao.js"></script>
-    <script src="chart1.js"></script>
+    <script src="js/menu.js"></script>
+    <script src="js/funcao.js"></script>
+    <script src="js/chart1.js"></script>
 </body>
 </html>
