--- a/Tabela_Merge.html
+++ b/Tabela_Merge.html
@@ -71,12 +71,26 @@
         </span>
     </div>
     <div id="text-lad">
-      <h2>Resumo</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nec ullamcorper leo, et mattis augue. In aliquam odio nibh, sed porttitor massa congue sit amet. Integer vitae ex eu purus mattis auctor. Sed cursus dui id risus aliquam, a bibendum purus volutpat. Sed quis libero eget metus convallis cursus vitae at lacus. Ut viverra dui nec erat porttitor tincidunt. Maecenas at placerat justo, et euismod dui.</p>
-      <p>Vestibulum vestibulum commodo ligula, varius finibus dolor porttitor eget. Donec vitae euismod velit. Maecenas tincidunt vehicula mi quis tristique. Nam et augue vulputate, posuere justo eget, tristique nulla. Maecenas gravida et sapien at porta. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non dui vitae quam blandit varius eu vel lacus. In hac habitasse platea dictumst.</p>
-      <img src="img/img-1.webp" alt="" srcset="">
-      <p>Vestibulum vestibulum commodo ligula, varius finibus dolor porttitor eget. Donec vitae euismod velit. Maecenas tincidunt vehicula mi quis tristique. Nam et augue vulputate, posuere justo eget, tristique nulla. Maecenas gravida et sapien at porta. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non dui vitae quam blandit varius eu vel lacus. In hac habitasse platea dictumst.</p>
-      <p>Vestibulum vestibulum commodo ligula, varius finibus dolor porttitor eget. Donec vitae euismod velit. Maecenas tincidunt vehicula mi quis tristique. Nam et augue vulputate, posuere justo eget, tristique nulla. Maecenas gravida et sapien at porta. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non dui vitae quam blandit varius eu vel lacus. In hac habitasse platea dictumst.</p>
+      <h2>MERGE SORT</h2>
+      <p>Sua ideia básica consiste em Dividir (o problema em vários subproblemas e resolver esses subproblemas através da recursividade) e Conquistar
+         (após todos os subproblemas terem sido resolvidos ocorre a conquista que é a união das resoluções dos subproblemas). 
+        Como o algoritmo Merge Sort usa a recursividade, há um alto consumo de memória e tempo de execução, tornando esta técnica não muito eficiente em alguns problemas.
+      </p>
+      <p>Depois disso, a função de mesclagem entra em ação e combina os arrays classificados em arrays maiores até que todo o array seja mesclado.</p>
+      <h3>Desvantagens</h3>
+      <p>• Utiliza funções recursivas; <br>
+         • Gasto extra de memória. O algoritmo cria uma cópia do vetor para cada nível da chamada recursiva, totalizando um uso adicional de 
+         memória igual a {\displaystyle O(n\log n)}{\displaystyle O(n\log n)}
+      </p>
+      <p>O Melhor caso ocorre quando o array já está ordenado.</p>
+      <p>O pior caso da execução deste algoritmo manifesta-se quando a entrada está ordenada em ordem decrescente.</p>
+      <p>O caso médio ocorre quando a entrada está em ordem aleatória.</p>
+      <ul id="ListaCasos">
+        <li>Complexidade Pior Caso: O(n log2 n)</li>
+        <li>Complexidade Caso Médio: O(n log2 n)</li>
+        <li>Complexidade Melhor Caso: O(n log2 n)</li>
+      </ul>
+      <img src="img/MergeSort_Ex.png" alt="" srcset="">
     </div>
   </div>
 
