--- a/pages/page2.html
+++ b/pages/page2.html
@@ -5,23 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="estilo.css">
-  <link rel="stylesheet" href="estilo2.css">
+  <link rel="stylesheet" href="../css/estilo.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="stylesheet/less" type="text/css" href="styles.less" />
+  <link rel="stylesheet/less" type="text/css" href="../css/styles.less" />
   <title>Sort</title>
 </head>
-
 <body>
-  <!--botão menu-->
-  <div>
-    <span id="btn-menu" class="show material-symbols-outlined">menu</span>
-  </div>
-
-  <!--sidebar-->
-  <div class="menu"></div>
-
   <!--conteudo-->
   <div class="container">
     <div class="buttons">
@@ -117,8 +107,7 @@
     </div>
   </div>
 
-  <script src="js/menu.js"></script>
-  <script src="js/funcao.js"></script>
+  <script src="../js/funcao.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/less" ></script>
 </body>
 
