--- a/index.html
+++ b/index.html
@@ -1,37 +1,350 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>Sort</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/estilo.css">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <title>Sort</title>
 </head>
-<body>
+
+<body class="main">
+  
+  <div class="container">
+
     <!--botão menu-->
-    <div>
-      <span id="btn-menu" class="show material-symbols-outlined">menu</span>
-    </div> 
+    <div id="btn-menu" class="show">
+      <span class="material-symbols-outlined">close</span>
+    </div>
     
-    <div class="menu"></div>
-
-    <!--container (botoes e grafico)-->
-    <div class="container">
-      <div class="buttons">
-        <button id="btn-melhor" class="button-5" role="button">Melhor caso</button>
-        <button id="btn-medio" class="button-5" role="button">Médio caso</button>
-        <button id="btn-pior" class="button-5" role="button">Pior caso</button>
+    <!--sidebar-->
+    <div id="sidebar" class="show">
+      <!-- topo -->
+      <div class="text-menu">
+        <span>Algoritmos de Ordenação</span>
       </div>
+      <!-- introdução -->
+      <div class="option-submenu">
+        <div class="option">
+          <span class="label">Introdução</span>
+          <div class="button expand clicked">
+            <span class="material-symbols-outlined">expand_more</span>
+          </div>
+        </div>
 
-      <div class="chart">
-        <canvas id="chart"></canvas>
+        <div class="submenu show">
+          <ul>
+            <li>
+              <a class="principal" href="pages/page1.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Gráfico geral</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="principal" href="pages/page2.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Tabela geral</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- BubbleSort -->
+      <div class="option-submenu">
+        <div class="option">
+          <span class="label">BubbleSort</span>
+          <div class="button expand">
+            <span class="material-symbols-outlined">expand_more</span>
+          </div>
+        </div>
+        <div class="submenu">
+          <ul>
+            <li>
+              <a href="pages/page3.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Gráfico</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="pages/page4.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Tabela</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- InsertionSort -->
+      <div class="option-submenu">
+        <div class="option">
+          <span class="label">InsertionSort</span>
+          <div class="button expand">
+            <span class="material-symbols-outlined">expand_more</span>
+          </div>
+        </div>
+        <div class="submenu">
+          <ul>
+            <li>
+              <a href="pages/page3.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Gráfico</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="pages/page4.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Tabela</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- MergeSort -->
+      <div class="option-submenu">
+        <div class="option">
+          <span class="label">MergeSort</span>
+          <div class="button expand">
+            <span class="material-symbols-outlined">expand_more</span>
+          </div>
+        </div>
+        <div class="submenu">
+          <ul>
+            <li>
+              <a href="pages/page3.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Gráfico</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="pages/page4.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Tabela</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- QuickSort -->
+      <div class="option-submenu">
+        <div class="option">
+          <span class="label">QuickSort</span>
+          <div class="button expand">
+            <span class="material-symbols-outlined">expand_more</span>
+          </div>
+        </div>
+        <div class="submenu">
+         <ul>
+            <li>
+              <a href="pages/page3.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Gráfico</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="pages/page4.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Tabela</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- ShellSort -->
+      <div class="option-submenu">
+        <div class="option">
+          <span class="label">ShellSort</span>
+          <div class="button expand">
+            <span class="material-symbols-outlined">expand_more</span>
+          </div>
+        </div>
+        <div class="submenu">
+         <ul>
+            <li>
+              <a href="pages/page3.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Gráfico</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="pages/page4.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Tabela</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+  
+      <!-- HeapSort -->
+  
+      <div class="option-submenu">
+        <div class="option">
+          <span class="label">HeapSort</span>
+          <div class="button expand">
+            <span class="material-symbols-outlined">expand_more</span>
+          </div>
+        </div>
+        <div class="submenu">
+         <ul>
+            <li>
+              <a href="pages/page3.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Gráfico</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="pages/page4.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Tabela</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+  
+      <!-- RidixSort -->
+  
+      <div class="option-submenu">
+        <div class="option">
+          <span class="label">RadixSort</span>
+          <div class="button expand">
+            <span class="material-symbols-outlined">expand_more</span>
+          </div>
+        </div>
+        <div class="submenu">
+         <ul>
+            <li>
+              <a href="pages/page3.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Gráfico</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="pages/page4.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Tabela</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+  
+      <!-- GnomeSort -->
+  
+      <div class="option-submenu">
+        <div class="option">
+          <span class="label">GnomeSort</span>
+          <div class="button expand">
+            <span class="material-symbols-outlined">expand_more</span>
+          </div>
+        </div>
+        <div class="submenu">
+         <ul>
+            <li>
+              <a href="pages/page3.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Gráfico</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="pages/page4.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Tabela</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+  
+      <!-- CountingSort -->
+  
+      <div class="option-submenu">
+        <div class="option">
+          <span class="label">CountingSort</span>
+          <div class="button expand">
+            <span class="material-symbols-outlined">expand_more</span>
+          </div>
+        </div>
+        <div class="submenu">
+         <ul>
+            <li>
+              <a href="pages/page3.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Gráfico</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="pages/page4.html" target="iframe">
+                <div class="subitem">
+                  <span class="label">Tabela</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  
+    <!--iframe -->
+    <iframe id="iframe" src="pages/page2.html" name="iframe"></iframe>
+  
+    <!-- lateral -->
+    <div class="lateral">
+      <div>
+        <span id="btn-lad" class="material-symbols-outlined">
+        keyboard_double_arrow_left
+        </span>
+      </div>
+      <div id="text-lad">
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="js/menu.js"></script>
-    <script src="js/funcao.js"></script>
-    <script src="js/chart1.js"></script>
+  </div>
+  
+  <script src="js/funcao.js"></script>
+  <script src="js/script.js"></script>
 </body>
+
 </html>
