--- a/page4.html
+++ b/page4.html
@@ -30,6 +30,7 @@
     </div>
   </div>
 
+  <!--box lateral-->
   <div class="lateral">
     <div id="btn-lad">
       <span class="material-symbols-outlined">
