table funcional, remodelagem

--- a/pages/page4.html
+++ b/pages/page4.html
@@ -27,33 +27,21 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr class="row">
             <th scope="row">MELHOR CASO</th>
-            <td>0,000001</td>
-            <td>0,000417</td>
-            <td>0,00034</td>
-            <td>0,000964</td>
           </tr>
-          <tr>
+          <tr class="row">
             <th scope="row">CASO MEDIO</th>
-            <td>0,006738</td>
-            <td>0,142355</td>
-            <td>512,679436</td>
-            <td>2388,123164</td>
           </tr>
-          <tr>
+          <tr class="row">
             <th scope="row">PIOR CASO</th>
-            <td>0,006474</td>
-            <td>0,042532</td>
-            <td>343,220966</td>
-            <td>1348,68849</td>
-          </tr>
+            </tr>
         </tbody>
       </table>
     </div>
   </div>
 
-  <script src="../js/funcao.js"></script>
+  <script src="../js/table.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/less" ></script>
 </body>
 
