--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="submenu">
           <ul>
             <li>
-              <a href="pages/page3.html" target="iframe">
+              <a href="pages/page3.html" target="iframe" class="btnGraph">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -75,7 +75,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe">
+              <a href="pages/page4.html" target="iframe" class="btnTable">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -96,7 +96,7 @@
         <div class="submenu">
           <ul>
             <li>
-              <a href="pages/page3.html" target="iframe">
+              <a href="pages/page3.html" target="iframe" class="btnGraph">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -104,7 +104,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe">
+              <a href="pages/page4.html" target="iframe" class="btnTable">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -125,7 +125,7 @@
         <div class="submenu">
           <ul>
             <li>
-              <a href="pages/page3.html" target="iframe">
+              <a href="pages/page3.html" target="iframe" class="btnGraph">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -133,7 +133,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe">
+              <a href="pages/page4.html" target="iframe" class="btnTable">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -154,7 +154,7 @@
         <div class="submenu">
          <ul>
             <li>
-              <a href="pages/page3.html" target="iframe">
+              <a href="pages/page3.html" target="iframe" class="btnGraph">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -162,7 +162,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe">
+              <a href="pages/page4.html" target="iframe" class="btnTable">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -183,7 +183,7 @@
         <div class="submenu">
          <ul>
             <li>
-              <a href="pages/page3.html" target="iframe">
+              <a href="pages/page3.html" target="iframe" class="btnGraph">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -191,7 +191,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe">
+              <a href="pages/page4.html" target="iframe" class="btnTable">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -214,7 +214,7 @@
         <div class="submenu">
          <ul>
             <li>
-              <a href="pages/page3.html" target="iframe">
+              <a href="pages/page3.html" target="iframe" class="btnGraph">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -222,7 +222,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe">
+              <a href="pages/page4.html" target="iframe" class="btnTable">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -245,7 +245,7 @@
         <div class="submenu">
          <ul>
             <li>
-              <a href="pages/page3.html" target="iframe">
+              <a href="pages/page3.html" target="iframe" class="btnGraph">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -253,7 +253,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe">
+              <a href="pages/page4.html" target="iframe" class="btnTable">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -276,7 +276,7 @@
         <div class="submenu">
          <ul>
             <li>
-              <a href="pages/page3.html" target="iframe">
+              <a href="pages/page3.html" target="iframe" class="btnGraph">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -284,7 +284,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe">
+              <a href="pages/page4.html" target="iframe" class="btnTable">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -307,7 +307,7 @@
         <div class="submenu">
          <ul>
             <li>
-              <a href="pages/page3.html" target="iframe">
+              <a href="pages/page3.html" target="iframe" class="btnGraph">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -315,7 +315,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe">
+              <a href="pages/page4.html" target="iframe" class="btnTable">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -331,18 +331,17 @@
     <iframe id="iframe" src="pages/page2.html" name="iframe"></iframe>
   
     <!-- lateral -->
-    <div class="lateral">
-      <div>
-        <span id="btn-lad" class="material-symbols-outlined">
-        keyboard_double_arrow_left
+    <div class="lateral show">
+      <div id="btn-lad">
+        <span class="material-symbols-outlined">
+        keyboard_double_arrow_right
         </span>
       </div>
-      <div id="text-lad">
-      </div>
+      <div id="text-lad"></div>
     </div>
 
   </div>
-  
+
   <script src="js/funcao.js"></script>
   <script src="js/script.js"></script>
 </body>
