--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable">
+              <a href="pages/page4.html" target="iframe" class="btnTable" id="btnTeste">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
