--- a/pages/page2.html
+++ b/pages/page2.html
@@ -32,75 +32,35 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr class="row">
             <th scope="row">BUBBLE SORT</th>
-            <td>0,000001</td>
-            <td>0,000417</td>
-            <td>0,00034</td>
-            <td>0,000964</td>
           </tr>
-          <tr>
+          <tr class="row">
             <th scope="row">SELECTION SORT</th>
-            <td>0,006738</td>
-            <td>0,142355</td>
-            <td>512,679436</td>
-            <td>2388,123164</td>
           </tr>
-          <tr>
+          <tr class="row">
             <th scope="row">INSERTION SORT</th>
-            <td>0,006474</td>
-            <td>0,042532</td>
-            <td>343,220966</td>
-            <td>1348,68849</td>
           </tr>
-          <tr>
+          <tr class="row">
             <th scope="row">MERGE SORT</th>
-            <td>0,006474</td>
-            <td>0,042532</td>
-            <td>343,220966</td>
-            <td>1348,68849</td>
           </tr>
-          <tr>
+          <tr class="row">
             <th scope="row">QUICK SORT</th>
-            <td>0,006474</td>
-            <td>0,042532</td>
-            <td>343,220966</td>
-            <td>1348,68849</td>
           </tr>
-          <tr>
+          <tr class="row">
             <th scope="row">SHELL SORT</th>
-            <td>0,006474</td>
-            <td>0,042532</td>
-            <td>343,220966</td>
-            <td>1348,68849</td>
           </tr>
-          <tr>
+          <tr class="row">
             <th scope="row">HEAP SORT</th>
-            <td>0,006474</td>
-            <td>0,042532</td>
-            <td>343,220966</td>
-            <td>1348,68849</td>
           </tr>
-          <tr>
+          <tr class="row">
             <th scope="row">RADIX SORT</th>
-            <td>0,006474</td>
-            <td>0,042532</td>
-            <td>343,220966</td>
-            <td>1348,68849</td>
           </tr>
-          <tr>
+          <tr class="row">
             <th scope="row">GNOME SORT</th>
-            <td>0,006474</td>
-            <td>0,042532</td>
-            <td>343,220966</td>
-            <td>1348,68849</td>
           </tr>
-          <tr>
+          <tr class="row">
             <th scope="row">COUNTING SORT</th>
-            <td>0,006474</td>
-            <td>0,042532</td>
-            <td>343,220966</td>
-            <td>1348,68849</td>
           </tr>
         </tbody>
       </table>
@@ -108,6 +68,8 @@
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/less" ></script>
+  <script type="module" src="../js/tableP.js"></script>
+  <script type="module" src="../js/data.js"></script>
 </body>
 
 </html>
