--- a/pages/page3.html
+++ b/pages/page3.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/estilo.css">
-  <link rel="stylesheet" href="css/estilo2.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet/less" type="text/css" href="../css/styles.less" />
@@ -22,7 +21,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="../js/chart1.js"></script>
+  <script type="module" src="../js/chart1.js"></script>
 </body>
 
 </html>
