--- a/index.html
+++ b/index.html
@@ -75,7 +75,36 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable" id="btnTeste">
+              <a href="pages/page4.html" target="iframe" class="btnTable" id="bubbleSort">
+                <div class="subitem">
+                  <span class="label">Tabela</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- SelectionSort -->
+      <div class="option-submenu">
+        <div class="option">
+          <span class="label">SelectionSort</span>
+          <div class="button expand">
+            <span class="material-symbols-outlined">expand_more</span>
+          </div>
+        </div>
+        <div class="submenu">
+          <ul>
+            <li>
+              <a href="pages/page3.html" target="iframe" class="btnGraph">
+                <div class="subitem">
+                  <span class="label">Gráfico</span>
+                  <span class="material-symbols-outlined">dataset</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="pages/page4.html" target="iframe" class="btnTable" id="selectionSort">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -104,7 +133,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable">
+              <a href="pages/page4.html" target="iframe" class="btnTable" id="insertionSort">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -133,7 +162,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable">
+              <a href="pages/page4.html" target="iframe" class="btnTable" id="mergeSort">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -162,7 +191,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable">
+              <a href="pages/page4.html" target="iframe" class="btnTable" id="quickSort">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -191,7 +220,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable">
+              <a href="pages/page4.html" target="iframe" class="btnTable" id="shellSort">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -203,7 +232,6 @@
       </div>
   
       <!-- HeapSort -->
-  
       <div class="option-submenu">
         <div class="option">
           <span class="label">HeapSort</span>
@@ -222,7 +250,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable">
+              <a href="pages/page4.html" target="iframe" class="btnTable" id="heapSort">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -233,7 +261,7 @@
         </div>
       </div>
   
-      <!-- RidixSort -->
+      <!-- RadixSort -->
   
       <div class="option-submenu">
         <div class="option">
@@ -253,7 +281,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable">
+              <a href="pages/page4.html" target="iframe" class="btnTable" id="radixSort">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -265,7 +293,6 @@
       </div>
   
       <!-- GnomeSort -->
-  
       <div class="option-submenu">
         <div class="option">
           <span class="label">GnomeSort</span>
@@ -284,7 +311,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable">
+              <a href="pages/page4.html" target="iframe" class="btnTable" id="gnomeSort">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -296,7 +323,6 @@
       </div>
   
       <!-- CountingSort -->
-  
       <div class="option-submenu">
         <div class="option">
           <span class="label">CountingSort</span>
@@ -315,7 +341,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable">
+              <a href="pages/page4.html" target="iframe" class="btnTable" id="countingSort">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -337,13 +363,14 @@
         keyboard_double_arrow_right
         </span>
       </div>
-      <div id="text-lad"></div>
+      <div id="text-lad">
+      </div>
     </div>
 
   </div>
 
-  <script src="js/funcao.js"></script>
-  <script src="js/script.js"></script>
+  <script type="module" src="js/funcao.js"></script>
+  <script type="module" src="js/text.js"></script>
 </body>
 
 </html>
