--- a/pages/page1.html
+++ b/pages/page1.html
@@ -24,6 +24,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="../js/chart1.js"></script>
+    <script type="module" src="../js/chart1.js"></script>
 </body>
 </html>
