--- a/pages/page4.html
+++ b/pages/page4.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <script src="../js/table.js"></script>
+  <script type="module" src="../js/table.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/less" ></script>
 </body>
 
