--- a/pages/page0.html
+++ b/pages/page0.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="../css/fundo.css">
+    <link rel="stylesheet" href="../css/estilo.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inicial</title>
 </head>
 <body>
-    <canvas class="background"></canvas>
-    <!--https://marcbruederlin.github.io/particles.js/-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script>
-    <script src="../js/particles.js"></script>
+    <div class="content__inner">
+        <h2 class="content__title">Estrutura de Dados</h2>
+        <h3 class="content__subtitle">Algoritmos de Ordenação</h2>
+    </div>
 </body>
 </html>
