Bug da pagina inicial corrigido

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     </div>
   
     <!--iframe -->
-    <iframe id="iframe" src="/pages/page0.html" name="iframe"></iframe>
+    <iframe id="iframe" src="https://gabrielcoelh8.github.io/GraphsAlgorithm/pages/page0.html" name="iframe"></iframe>
   
     <!-- lateral -->
     <div class="lateral">
